--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@remix-run/react": "^1.6.8",
     "@remix-run/vercel": "^1.6.8",
     "@vercel/node": "^2.4.4",
+    "axios": "0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
