--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/vercel": "^1.6.8",
     "@vercel/node": "^2.4.4",
     "axios": "0.27.2",
+    "dayjs": "1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
